--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
       </canvas>
 
       <figcaption>
-        <p><strong><a href="https://github.com/thewhodidthis/swing" title="Fork me on github">swing.js</a></strong> Helps create harmonograph inspired patterns</p>
+        <p><strong><a href="https://github.com/thewhodidthis/swing" title="Fork me on github">swing.js</a></strong> Helps create harmonograph style patterns</p>
       </figcaption>
     </figure>
 
