--- a/example/index.html
+++ b/example/index.html
@@ -1,26 +1,25 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>&middot; Swing &middot;</title>
-    <link rel="icon" href="https://example.thewhodidthis.com/favicon.ico">
-    <link rel="preload" href="bundle.js" as="script">
+    <meta name="description" content="Helps create harmonograph inspired drawings">
+    <title>swing.js</title>
+    <link rel="icon" href="//example.thewhodidthis.com/favicon.ico">
     <link rel="preload" href="index.css" as="style">
     <link rel="stylesheet" href="index.css">
+    <script src="bundle.js" defer></script>
+    <noscript>
+      <style>canvas { background-image: url(screenshot.png) }</style>
+    </noscript>
   </head>
-
   <body>
     <figure>
+        <img src="screenshot.png" alt="Screenshot: 3 by 2 grid of damped pendulum drawings (odd numbers repeated series)" height="360" width="540">
       <canvas height="360" width="540">
-        <img src="screenshot.png" alt="screenshot.png" height="360" width="540" />
       </canvas>
-
       <figcaption>
-        <p><strong><a href="https://github.com/thewhodidthis/swing" title="Fork me on github">swing.js</a></strong> Helps create harmonograph style patterns</p>
+        <p><strong><a href="https://github.com/thewhodidthis/swing">swing.js</a></strong> Helps create harmonograph style patterns</p>
       </figcaption>
     </figure>
-
-    <noscript><small><em>please enable javascript</em></small></noscript>
-    <script src="bundle.js"></script>
   </body>
 </html>
